--- a/ProyectoVpC.tex
+++ b/ProyectoVpC.tex
@@ -1,7 +1,7 @@
 \documentclass[
 11pt, % The default document font size, options: 10pt, 11pt, 12pt
 %codirector, % Uncomment to add a codirector to the title page
-]{charter} 
+]{ProyectoVpC} 
 
 
 % El títulos de la memoria, se usa en la carátula y se puede usar el cualquier lugar del documento con el comando \ttitle
@@ -19,13 +19,13 @@
 \autor{Ing. Gustavo Ramoscelli}
 
 % El nombre del director y co-director, se puede usar el cualquier lugar del documento con el comando \supname y \cosupname y \pertesupname y \pertecosupname
-\director{TBD}
-\pertenenciaDirector{TBD} 
-%\codirector{} % para que aparezca en la portada se debe descomentar la opción codirector en los parámetros de documentclass
-%\pertenenciaCoDirector{FIUBA}
+\director{Ing. Ariel Lutenberg}
+\pertenenciaDirector{FIUBA} 
+\codirector{} % para que aparezca en la portada se debe descomentar la opción codirector en los parámetros de documentclass
+\pertenenciaCoDirector{FIUBA}
 
 % Nombre del cliente, quien va a aprobar los resultados del proyecto, se puede usar con el comando \clientename y \empclientename
-\cliente{TBD}
+\cliente{Ing. Martín Harris}
 \empresaCliente{Trenes Argentions S.A.}
  
 \fechaINICIO{4 de marzo de 2025}		%Fecha de inicio de la cursada de GdP \fechaInicioName
@@ -85,7 +85,7 @@ Buenos Aires, \fechaInicioName
 
 \vspace{2cm}
 
-Por medio de la presente se acuerda con el \authorname\hspace{1px} que su Trabajo Final de la \degreename\hspace{1px} se titulará ``\ttitle'' y consistirá en \textcolor{red}{la implementación de un prototipo de un sistema de control de temperatura de una caldera industrial}. El trabajo tendrá un presupuesto preliminar estimado de \textcolor{red}{600} horas y un costo estimado de \textcolor{red}{\$ XXX}, con fecha de inicio el \fechaInicioName\hspace{1px} y fecha de presentación pública el \fechaFinalName.
+Por medio de la presente se acuerda con el \authorname\hspace{1px} que su Trabajo Final de la \degreename\hspace{1px} se titulará ``\ttitle'' y consistirá en la implementación de un prototipo de un sistema de visión por computadora que genere información sobre la altura del pasto a ambos lados de las vías por donde circule una formación de tren. El trabajo tendrá un presupuesto preliminar estimado de 600 horas y un costo estimado de \$ 100.000, con fecha de inicio el \fechaInicioName\hspace{1px} y fecha de presentación pública el \fechaFinalName.
 
 Se adjunta a esta acta la planificación inicial.
 
@@ -106,26 +106,35 @@ Se adjunta a esta acta la planificación inicial.
 \section{1. Descripción técnica-conceptual del proyecto a realizar}
 \label{sec:descripcion}
 
-\begin{consigna}{red} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
-El objetivo es que el lector, en una o dos páginas, exponga de qué se trata el proyecto y cuáles son sus desafíos, cuál es la motivación para realizarlo y su importancia.
+\subsection{Introducción y Contexto}
+\label{sec:descripcion}
+El mantenimiento de la vegetación en los alrededores de las vías férreas es fundamental para garantizar la seguridad y eficiencia del transporte ferroviario. La presencia de pasto alto puede afectar la visibilidad de los maquinistas, deteriorar la infraestructura y aumentar el riesgo de incendios, especialmente en temporadas secas. Actualmente, la inspección y mantenimiento de la vegetación son tareas costosas que requieren personal capacitado y revisiones periódicas, muchas de ellas realizadas manualmente.
 
-Se debe introducir el contexto del proyecto, el estado del arte en la temática, describir la propuesta de valor, cuál es el problema que atiende y cuál es la solución que se propone. Se debe dar una descripción funcional de la solución que incluya un diagrama en bloques.
+En este contexto, el presente proyecto propone una solución innovadora basada en inteligencia artificial (IA) y visión por computadora para automatizar el monitoreo del crecimiento de la vegetación en las vías de tren. A través de una cámara instalada en la parte frontal de una locomotora y un sistema de procesamiento de imágenes en tiempo real, se busca estimar y modelar la altura del pasto, proporcionando datos clave para la planificación del mantenimiento.
 
-Puede ser útil incluir en esta sección la respuesta a alguna de estas preguntas:
+\subsection{Estado del Arte y Propuesta de Valor}
+Actualmente, las metodologías empleadas para la inspección de vegetación en el ámbito ferroviario se realizan inspecciones visuales. Esta forma de trabajo presenta limitaciones en términos de costos y accesibilidad. El uso de visión por computadora y técnicas de aprendizaje de máquina representará un avance significativo al bajar los costos que insumen las inspecciones periódicas de los trabajadores.
+
+La propuesta de valor del sistema radica en su capacidad para operar en tiempo real, facilitando la detección y medición precisa del crecimiento del pasto sin interrumpir las operaciones ferroviarias. Este enfoque no solo optimiza la planificación de mantenimiento, sino que también reduce costos y minimiza riesgos operativos.
+
+\subsection{Problema y Solución Propuesta}
+El problema central que aborda este proyecto es la falta de un sistema automatizado y eficiente para el monitoreo del crecimiento del pasto en las vías ferroviarias. Actualmente, las inspecciones manuales y los mantenimientos programados pueden ser ineficientes, generando gastos innecesarios y riesgos para la infraestructura.
+
+La solución consiste en un sistema basado en IA que emplea aprendizaje de máquina para segmentar imágenes de video y predecir la altura del pasto en tiempo real. La información generada servirá como insumo para la toma de decisiones sobre el mantenimiento de la vegetación, optimizando la asignación de recursos y mejorando la seguridad operativa.
+
+\subsection{Descripción Funcional y Diagrama en Bloques}
+El sistema se compone de los siguientes módulos principales:
 
 \begin{itemize}
-	\item ¿Cuál es el contexto del proyecto, es un emprendimiento personal, un proyecto para una empresa, es parte del programa de vinculación con empresas del posgrado?
-	\item ¿Existen o aplican condiciones especiales al proyecto, financiamiento de algún programa público o privado, acuerdos de confidencialidad, acuerdos sobre la propiedad intelectual de los entregables u otros?
-	\item ¿Cómo se compara la solución propuesta con el estado del arte en el campo de aplicación? ¿En qué aspectos destaca?
-	\item ¿Ayuda a la explicación si se incluye un lienzo Canvas del Modelo de Negocio?
-	\item ¿En qué estado del ciclo de vida está la solución que se propone?
-	\item ¿Cuáles son las características del cliente (el adoptante de los entregables del proyecto) qué valora, qué necesita?
-	\item ¿Por dónde pasa la innovación?
+\item{\bf Captura de Video:} Una cámara montada en la locomotora captura imágenes del entorno en diversas condiciones climáticas y de iluminación.
+
+\item{\bf Procesamiento de Imágenes:} Se aplica segmentación basada en color y modelos de redes neuronales para identificar la vegetación.
+
+\item{\bf Estimación de Altura:} La red neuronal entrenada analiza las imágenes y calcula la altura del pasto en cada sección de la vía.
+
+\item{\bf Almacenamiento y Visualización:} Los datos generados se almacenan en una base de datos para su consulta y análisis.
 \end{itemize}
-
-La descripción técnica-conceptual \textbf{debe incluir al menos un diagrama en bloques del sistema} y descripción funcional de la solución propuesta.
-
-Las figuras se deben mencionar en el texto ANTES de que aparezcan con una frase como la siguiente: ``En la figura \ref{fig:diagBloques} se presenta el diagrama en bloques del sistema. Se observa que...''.  La regla es que las figuras nunca pueden ir antes de ser mencionadas en el texto, porque sino el lector no entiende por qué de pronto aparece una figura.
+A continuación, se presenta un diagrama en bloques del sistema:
 
 \begin{figure}[htpb]
 \centering 
@@ -133,25 +142,13 @@ Las figuras se deben mencionar en el texto ANTES de que aparezcan con una frase 
 \caption{Diagrama en bloques del sistema.}
 \label{fig:diagBloques}
 \end{figure}
-
 \vspace{25px}
 
-El tamaño del texto en TODAS las figuras debe ser adecuado \textbf{para que NO pase lo que ocurre en la figura \ref{fig:diagBloques}}, donde el lector debe esforzarse para poder leer el texto. 
-
-Los colores usados en el diagrama deben ser adecuados, tal que ayuden a comprender mejor el diagrama. Se recomienda evitar colores primarios (como rojo, verde o cyan) y usar la gama de colores pastel.
-
-\end{consigna} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
+\subsection{Impacto y Futuras Aplicaciones}
+Este proyecto tiene el potencial de mejorar el mantenimiento ferroviario al proporcionar un método preciso, eficiente y escalable para el monitoreo de la vegetación. En el futuro, el sistema podría integrarse con tecnologías adicionales, como sensores LiDAR que permitirán el sensado nocturno. Asimismo, su implementación en múltiples locomotoras permitiría una cobertura extensiva y una planificación de mantenimiento basada en datos en tiempo real.
 
 \section{2. Identificación y análisis de los interesados}
 \label{sec:interesados}
-
-\begin{consigna}{red} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
-\textbf{Nota importante:} borrar esto y todas las consignas en color rojo antes de entregar este documento). Esto se hace eliminando el par de comandos que forman el bloque consigna, \verb!\begin{consigna}{red}! y \verb!\end{consigna}{red}! del código. 
- 
-Es inusual que una misma persona esté en más de un rol, incluso en proyectos chicos. Si se considera que una persona cumple dos o más roles, entonces \textbf{solo dejarla en el rol más importante}. 
-
-Por ejemplo, si una persona es Cliente pero también colabora u orienta, dejarla solo como Cliente. Si una persona es el Responsable, \textbf{no debe ser colocado también como miembro del equipo}.
-
 
 \begin{table}[ht]
 %\caption{Identificación de los interesados}
@@ -160,90 +157,62 @@ Por ejemplo, si una persona es Cliente pero también colabora u orienta, dejarla
 \hline
 \rowcolor[HTML]{C0C0C0} 
 Rol           & Nombre y Apellido & Organización 	& Puesto 	\\ \hline
-Auspiciante   &                   &              	&        	\\ \hline
+Auspiciante   & \clientename                  &  \empclientename            	&        	\\ \hline
 Cliente       & \clientename      &\empclientename	&        	\\ \hline
-Impulsor      &                   &              	&        	\\ \hline
+%Impulsor      &                   &              	&        	\\ %\hline
 Responsable   & \authorname       & FIUBA        	& Alumno 	\\ \hline
-Colaboradores &                   &              	&        	\\ \hline
+%Colaboradores &                   &              	&        	\\ %\hline
 Orientador    & \supname	      & \pertesupname 	& Director del Trabajo Final \\ \hline
-Equipo        & miembro1 \newline 
-				miembro2          &              	&        	\\ \hline
-Opositores    &                   &              	&        	\\ \hline
-Usuario final &                   &              	&        	\\ \hline
+%Equipo        & miembro1 \newline 
+%				miembro2          &              	&        	\\ %\hline
+%Opositores    &                   &              	&        	\\ %\hline
+Usuario final & Sistemas de Mantenimiento                 & \empclientename              	&        	\\ \hline
 \end{tabularx}
 \end{table}
 
-El Director suele ser uno de los orientadores.
-
-No dejar celdas vacías; si no hay nada que poner en una celda colocar un signo ``-''.
-
-No dejar filas vacías; si no hay nada que poner en una fila entonces eliminarla.
-
-Es deseable listar a continuación las principales características de cada interesado.
- 
-Por ejemplo:
 \begin{itemize}
-	\item Orientador: la Dra. Ing. María Gómez es experta en la temática y va a ayudar con la definición de los requerimientos y el desarrollo del firmware del embebido.
+	\item Orientador: El/la \supname \ es experto/a en sistemas de visión por computadora y me asistirá en la parte de implementación y entrenamiento del modelo de redes neuronales artificiales.
 	\item Auspiciante: es riguroso y exigente con la rendición de gastos. Tener mucho cuidado con esto.
-	\item Equipo: Juan Perez, suele pedir licencia porque tiene un familiar con una enfermedad. Planificar considerando esto.
 \end{itemize}
-
-\end{consigna} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
-
 
 \section{3. Propósito del proyecto}
 \label{sec:proposito}
 
-\begin{consigna}{red} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
-
-¿Por qué se hace el proyecto? ¿Qué se quiere lograr? 
-
-Se recomienda que sea solo un párrafo que continúe con la idea de la frase ``el propósito de este proyecto es...'' (omitir la frase, ya que está en el título de la sección).
-\end{consigna}
+Optimizar el monitoreo y gestión de la vegetación en vías de tren mediante un sistema automatizado de visión por computadora que permita estimar la altura del pasto en tiempo real. La solución busca mejorar la seguridad operativa, reducir costos asociados a la supervisión manual y facilitar la toma de decisiones en el mantenimiento ferroviario, proporcionando información precisa y accesible para optimizar la planificación de intervenciones.
 
 \section{4. Alcance del proyecto}
 \label{sec:alcance}
 
-\begin{consigna}{red}
-¿Qué se incluye y que no se incluye en este proyecto?
-
-Se refiere al trabajo que se va a hacer para entregar el producto o resultado especificado. 
-
-Explicitar todo lo quede comprendido dentro del alcance del proyecto. Por ejemplo:
-
 El proyecto incluye:
 \begin{itemize}
-	\item Ítem 1.
-	\item Ítem 2.
-		\begin{itemize}
-		\item Subítem 1.
-		\item Subítem 2.
-		\item ...
-		\end{itemize}
-	\item ...
-	
+\item Captura de datos mediante la instalación de una cámara en la parte frontal de una locomotora para registrar videos en diferentes condiciones climáticas y de iluminación.
+\item Procesamiento de imágenes aplicando técnicas de segmentación para identificar la vegetación en los alrededores de las vías.
+\item Entrenamiento de un modelo de inteligencia artificial basado en redes neuronales para estimar la altura del pasto a partir de las imágenes capturadas.
+\item Validación del sistema en entornos controlados y pruebas en campo para evaluar su precisión y desempeño bajo distintas condiciones.
+\item Análisis de factibilidad de procesamiento en tiempo real utilizando hardware especializado como GPU o dispositivos embebidos.
+\item Desarrollo de un prototipo funcional, que permitirá demostrar la viabilidad del sistema y su potencial implementación en el sector ferroviario.
+
 \end{itemize}
-
-Explicitar además todo lo que no quede incluido (``El presente proyecto no incluye...'')
-
-\end{consigna} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
-
+El proyecto no incluye:
+\begin{itemize}
+\item Implementación a gran escala en múltiples locomotoras o redes ferroviarias.
+\item Integración con sensores adicionales como LiDAR o GPS, aunque se plantea como una posible extensión futura.
+\item Desarrollo de una plataforma de monitoreo centralizada para la gestión de datos a nivel operativo.
+\item El alcance del proyecto se limita al diseño, desarrollo y validación de un sistema experimental, proporcionando las bases para futuras mejoras e implementación en escenarios reales.
+\end{itemize}
 
 \section{5. Supuestos del proyecto}
 \label{sec:supuestos}
-
-\begin{consigna}{red} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
-``Para el desarrollo del presente proyecto se supone que: ...''
-
+Para el desarrollo del presente proyecto se supone que:
 \begin{itemize}
-	\item Supuesto 1.
-	\item Supuesto 2.
-	\item ...
+\item Se contará con acceso a una locomotora de pruebas para la instalación de la cámara y la recolección de datos en distintas condiciones climáticas.
+\item La capacidad de procesamiento de los equipos utilizados será suficiente para ejecutar modelos de visión por computadora en tiempo real o con una latencia aceptable.
+\item Se dispondrá de un conjunto de datos representativo para entrenar y validar la red neuronal, con ejemplos en diversas condiciones de iluminación y tipos de vegetación.
+\item No habrá restricciones regulatorias o normativas que impidan la instalación de equipos en la locomotora durante la fase experimental.
+\item Se contará con el apoyo de personal técnico para la instalación y configuración de hardware y software necesarios para la prueba del sistema.
+\item Los costos de adquisición de hardware y almacenamiento de datos serán viables dentro del presupuesto del proyecto.
+\item No se prevén cambios significativos en las condiciones de operación ferroviaria que afecten el desarrollo del sistema durante la ejecución del proyecto.
 \end{itemize}
-
-Por ejemplo, se podrían incluir supuestos respecto a disponibilidad de tiempo y recursos humanos y materiales, sobre la factibilidad técnica de distintos aspectos del proyecto, sobre otras cuestiones que sean necesarias para el éxito del proyecto como condiciones macroeconómicas o reglamentarias.
-
-\end{consigna} % ELIMINAR \begin{consigna}{red} y \end{consigna}{red} en las secciones que vayan completando para cada entrega parcial.
 
 \section{6. Requerimientos}
 \label{sec:requerimientos}
